--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "dream",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "cra-template": "1.3.0",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
